--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,55 @@
     padding: 0;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 24px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: antiquewhite;
+}
+
+.navbar {
+    background-color: #7290c4 ;
+    color: #000;
+}
+
+main {
+    height: 100vh;
+}
+
+main section{
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    
+}
+
+main section h1{
+    display: flex;
+    justify-content: center;
+}
+
+footer{
+    background-color: #000;
+    color: aliceblue;
+}
+
+footer div{
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+footer p{
+    font-size: 12px;
+    font-weight: bold;
+    display: flex;
+    text-align: center;
+}
